--- a/groupby/package.json
+++ b/groupby/package.json
@@ -21,7 +21,8 @@
     "bootstrap": "^5.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
