--- a/groupby/package.json
+++ b/groupby/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@ng-select/ng-select": "^8.1.1",
     "bootstrap": "^5.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
