--- a/groupby-backend/src/main/resources/application.properties
+++ b/groupby-backend/src/main/resources/application.properties
@@ -1,1 +1,46 @@
 
+groupby.app.base_url=http://localhost:8080
+groupby.app.front_base_url=http://localhost:4200
+
+# Database properties
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/groupby
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# Flyway
+spring.flyway.user=root
+spring.flyway.password=root
+spring.flyway.schemas=groupby
+spring.flyway.url=jdbc:mysql://localhost:3306/groupby
+
+# JWT =====================================
+groupby.app.jwtSecret=secret
+# 15 min
+groupby.app.jwtExpirationMs=900000
+# 12h
+groupby.app.jwtRefreshExpirationMs=43200000
+
+# Mail, smtp ==============================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=groupby.mail
+spring.mail.password=${SMTP_SPRING_PASSWORD}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS, port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# SSL, post 465
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
