--- a/groupby-backend/src/main/resources/application.properties
+++ b/groupby-backend/src/main/resources/application.properties
@@ -45,3 +45,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # SSL, post 465
 #spring.mail.properties.mail.smtp.socketFactory.port = 465
 #spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+
+# Swagger
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
