--- a/groupby-backend/src/main/resources/application.properties
+++ b/groupby-backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=root
 spring.jpa.database = MYSQL
 spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 
 
